# oneContainer-Templates

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CODEOWNERS  README.rst
components/: dldt-ie.m4  ffmpeg.m4  gmmlib.m4  gst-core.m4  gst-gva.m4  gst-libav.m4  gst-svt.m4  igc.m4  level-zero.m4  libaom.m4  libx264.m4  meson.m4  ocl.m4  opencv.m4  svt-av1.m4
doc/: new_template_howto.rst
scripts/: ci-identify-components.sh
system/: begin.m4  centos-repo.m4
tests/: .gitignore  CMakeLists.txt  consistency.sh.m4  readme.rst
tests/components/: CMakeLists.txt  single.m4
tests/m4/: CMakeLists.txt
tests/stacks/: CMakeLists.txt
tests/stacks/all/: CMakeLists.txt  Dockerfile.m4
tests/stacks/media/: CMakeLists.txt
tests/stacks/media/distropkg/: CMakeLists.txt  Dockerfile.m4
tests/stacks/media/intelpkg/: CMakeLists.txt  Dockerfile.m4
tests/stacks/media/selfbuild/: CMakeLists.txt  Dockerfile.m4
